fixed image overflow bug on home page

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -942,6 +942,9 @@ body {
   color: white;
 }
 .home .image-cont {
+  padding-bottom: 100%;
+  height: 0;
+  overflow: hidden;
   cursor: pointer;
 }
 .home .image-cont:hover {
