--- a/src/styles/less/home.less
+++ b/src/styles/less/home.less
@@ -10,6 +10,9 @@
   }
 
   .image-cont {
+    padding-bottom: 100%;
+    height: 0;
+    overflow: hidden;
     cursor: pointer;
     &:hover {
       opacity: 0.7;
